fix: increased recipe font size on index for readability, underline changed to red

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -8,11 +8,13 @@
 
 a{
   color:black;
+  font-size: 24px;
   text-decoration: none;
 }
 
 a:hover{
   text-decoration: underline;
+  text-decoration-color: red;
 }
 .heading{
   font-weight: 700;
@@ -65,3 +67,4 @@ a:hover{
 .pr-30{
   padding-right: 30px;
 }
+
